--- a/config/xmop_franka.yaml
+++ b/config/xmop_franka.yaml
@@ -2,10 +2,10 @@ default_goal: [[0.3064, 0.0072, 0.4866], [-0.0142, 0.9996, 0.0084, -0.0202]] # d
 joint_state_mask: [True, True, True, True, True, True, True] # robot might have unnecessary joints which can be ignored using this mask
 topics_config:
   js_topic: '/franka_state_controller/joint_states' # topic for the robot's joint states in real-time
-  pc_topic: '/xmop/obstacle_points' # topic for the segmented obstacle pointcloud
-  offline_action_topic: '/effort_joint_trajectory_controller/follow_joint_trajectory'
+  pc_topic: '/xmop/obstacle_points' # topic for the segmented and calibrated obstacle pointcloud
+  offline_action_topic: '/effort_joint_trajectory_controller/follow_joint_trajectory' # from robot action server
   rollout_rviz_topic: '/xmop/planned_path'
-  online_command_topic: '/effort_joint_trajectory_controller/follow_joint_trajectory/goal'
+  online_command_topic: '/effort_joint_trajectory_controller/follow_joint_trajectory/goal' # from robot action server
 
 xmop-s-online:
   exec_freq: 3
@@ -26,14 +26,15 @@ xmop-online:
   max_rollout_steps: 1 # not required
 
 xmop-offline:
-  exec_freq: 3
-  query_factor: 0.01
-  smoothing_factor: 0
+  exec_freq: 3 # higher makes the rollout smoother
+  query_factor: 0.01 # determines granularity of the trajectory
+  smoothing_factor: 0 # higher maker the motion smoother but takes longer time to reach the goal
   max_rollout_steps: 200
 
 obstacle_seg:
-  pc_topic: '/front_cam/depth/color/points' # topic for the calibrated environment pointcloud with respect to robot's base 
+  pc_topic: '/front_cam/depth/color/points' # topic for the environment pointcloud
   frame_id: 'panda_link0' # pointcloud frame id
   camera: 'realsense' # camera brand
   hsv_thresh: [66, 91, 53, 255, 41, 239] # green screen
+  # this is printed by the generate_transform_<camera-name>.py script
   pc_transform: [[0.013959541865802108, 0.4939760916734418, -0.8693634181056514, 1.407989393127987], [0.9993702017464595, -0.03526041172042495, -0.003988033479371963, -0.004593746973803109], [-0.0326241050151079, -0.8687602231895729, -0.49415720476850533, 0.7741296384247733], [0.0, 0.0, 0.0, 1.0]]
